--- a/APPMERAKI2/src/app/components/bienvenidos/bienvenidos.component.html
+++ b/APPMERAKI2/src/app/components/bienvenidos/bienvenidos.component.html
@@ -39,5 +39,54 @@
         </ng-template>
 
     </div> -->
+     <!-- <div class="contenedor" *ngIf="auth.user$ | async as user; else login">
+        {{user}}
+        <button mat-button class="button" (click)="auth.signOut()">Sign Out</button>
+    </div>
+    <div class="boton">
+        <ng-template #login>
+            <button routerlink="registro" mat-button class="w3-yellow" (click)="auth.googleSignin()">Entrar</button>
+            <router-outlet></router-outlet>
+        </ng-template>
+
+    </div> -->
+
+     <!-- <div class="contenedor" *ngIf="auth.user$ | async as user; else login">
+        {{user}}
+        <button mat-button class="button" (click)="auth.signOut()">Sign Out</button>
+    </div>
+    <div class="boton">
+        <ng-template #login>
+            <button routerlink="registro" mat-button class="w3-yellow" (click)="auth.googleSignin()">Entrar</button>
+            <router-outlet></router-outlet>
+        </ng-template>
+
+    </div> -->
+
+    v
+     <!-- <div class="contenedor" *ngIf="auth.user$ | async as user; else login">
+        {{user}}
+        <button mat-button class="button" (click)="auth.signOut()">Sign Out</button>
+    </div>
+    <div class="boton">
+        <ng-template #login>
+            <button routerlink="registro" mat-button class="w3-yellow" (click)="auth.googleSignin()">Entrar</button>
+            <router-outlet></router-outlet>
+        </ng-template>
+
+    </div> -->
+
+     <!-- <div class="contenedor" *ngIf="auth.user$ | async as user; else login">
+        {{user}}
+        <button mat-button class="button" (click)="auth.signOut()">Sign Out</button>
+    </div>
+    <div class="boton">
+        <ng-template #login>
+            <button routerlink="registro" mat-button class="w3-yellow" (click)="auth.googleSignin()">Entrar</button>
+            <router-outlet></router-outlet>
+        </ng-template>
+
+    </div> -->
+
 
 </mat-card>
